:root {fixed, overflow: scroll}

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,22 +4,31 @@
   box-sizing: border-box;
 }
 
-body {
+:root{
   ::-webkit-scrollbar {
     display: none;
   }
 }
 
-.background {
+#root {
+  position: fixed;
   background: linear-gradient(180deg, #0c1b22 0%, #1c3134 100%);
   background-size: cover;
   height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
   overflow-y: scroll;
   z-index: -1;
-
-.wave1, .wave2, .wave3 {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
 }
+
+.background {
+  .wave1,
+  .wave2,
+  .wave3 {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    z-index: -1;
+  }
 }
